# jai

./: CLAUDE.md  README.md  how-to.md  main.py  pyproject.toml  step-by-step.md  study.md
data/: raw.txt  samples.txt
docs/: 00-overview.md  01-environment-setup.md  02-project-structure.md  03-data-preparation.md  04-tokenizer.md  05-model-architecture.md  06-training.md  07-generation.md  08-concepts.md  09-tips.md
faq/: embedding-and-prediction.md
scripts/: prepare_samples.py
