# =============================================================================
# JAI (Job AI) 프로젝트 설정 파일
# =============================================================================
# pyproject.toml은 Python 프로젝트의 표준 설정 파일입니다.
# PEP 518, PEP 621에 정의된 형식을 따릅니다.
# 이 파일은 uv, pip, poetry 등 패키지 매니저가 읽어서 프로젝트를 관리합니다.
# =============================================================================

[project]
# 프로젝트 이름 (패키지 배포 시 사용되는 고유 식별자)
name = "jai"

# 프로젝트 버전 (시맨틱 버저닝: MAJOR.MINOR.PATCH)
# - MAJOR: 호환되지 않는 API 변경
# - MINOR: 하위 호환되는 기능 추가
# - PATCH: 하위 호환되는 버그 수정
version = "0.1.0"

# 프로젝트 설명 (PyPI 등에 표시됨)
description = "전 세계 구인/구직 정보를 제공하는 Job LLM을 처음부터 구현하는 학습 프로젝트"

# README 파일 경로 (프로젝트 상세 설명)
readme = "README.md"

# 필요한 Python 버전
# >=3.13: Python 3.13 이상 필요
# 다른 예시: ">=3.10,<4.0" (3.10 이상, 4.0 미만)
requires-python = ">=3.13"

# 프로젝트 의존성 패키지 목록
# uv add <패키지명> 명령어로 추가하면 자동으로 이 배열에 추가됨
# 예시:
#   "torch>=2.0"      - torch 2.0 이상
#   "numpy"           - numpy 최신 버전
#   "tqdm~=4.65"      - tqdm 4.65.x 버전
dependencies = [
    "numpy>=2.4.1",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

# =============================================================================
# 추가 가능한 선택적 섹션들 (필요시 주석 해제하여 사용)
# =============================================================================

# [project.optional-dependencies]
# # 개발용 의존성 (uv add --dev로 추가)
# dev = [
#     "pytest",       # 테스트 프레임워크
#     "black",        # 코드 포매터
#     "ruff",         # 린터
# ]

# [project.scripts]
# # CLI 명령어 등록 (패키지 설치 후 터미널에서 실행 가능)
# jai = "jai.main:main"

# [tool.uv]
# # uv 패키지 매니저 전용 설정
# dev-dependencies = []

# [tool.pytest.ini_options]
# # pytest 설정
# testpaths = ["tests"]

# [tool.black]
# # black 코드 포매터 설정
# line-length = 88

# [tool.ruff]
# # ruff 린터 설정
# line-length = 88
